# investats

./: .gitignore  README.md  setup.cfg
example/: .gitignore  data.yml  gen-entries.py  plots.py  raw.txt  requirements.txt  scrape.py
investats/: cli.py
investats_aggr/: cli.py
investats_gen/: cli.py
investats_scrape/: cli.py
test/: conftest.py  test_investats_aggr_cli.py  test_investats_cli.py  test_investats_gen_cli.py  test_investats_scrape_cli.py
