[metadata]
name = investats
url = https://github.com/dmotte/investats
author = dmotte
license = MIT

description = Investment statistics calculator
long_description =
    TODO

    Please refer to the [GitHub repository](https://github.com/dmotte/investats) for more information.
long_description_content_type = text/markdown

keywords = calculator statistics csv command analysis value analyzer gain yield investment compute return statistic invest investats
classifiers =
    Intended Audience :: End Users/Desktop
    Environment :: Console
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Terminals
    Topic :: Utilities

version = 0.0.0

[options]
install_requires =
python_requires = >=3.10.12
packages = investats

[options.entry_points]
console_scripts =
    investats = investats.cli:main
